# tweeny

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.css  index.html
cmake/: GenerateSingleHeader.cmake  SetupCPack.cmake  SetupExports.cmake  SetupVersion.cmake  TweenyConfig.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  MANUAL.dox  MANUAL_8h_source.html  Makefile  README.md  annotated.html  classes.html  classtweeny_1_1easing-members.html  classtweeny_1_1easing.html  classtweeny_1_1tween-members.html  classtweeny_1_1tween.html  classtweeny_1_1tween_3_01T_01_4-members.html  classtweeny_1_1tween_3_01T_01_4.html  classtweeny_1_1tween_3_01T_01_4_a05e7fe93b91f66816b6038f4ac45620b.html  classtweeny_1_1tween_3_01T_01_4_a0a3f8061170dd2ef6e4b7899f094d483.html  classtweeny_1_1tween_3_01T_01_4_a15e4951fdbb2bf681a9a8418c6057c9a.html  classtweeny_1_1tween_3_01T_01_4_a18699df9425ef39b3539b2b947936be8.html  classtweeny_1_1tween_3_01T_01_4_a3890d6b12dc423678b14e3f4f124a62c.html  classtweeny_1_1tween_3_01T_01_4_a3e57962d275ec76a6c3ec3524384e7c9.html  classtweeny_1_1tween_3_01T_01_4_a42dcbb3225a098dd7b71610d17902276.html  classtweeny_1_1tween_3_01T_01_4_a437596339537ef3fdff5e570f63b4611.html  classtweeny_1_1tween_3_01T_01_4_a4b23292a814742d4c1a8c25c4a40d8f2.html  classtweeny_1_1tween_3_01T_01_4_a4b6a154cb5a978c774f604b1ffd1c272.html  classtweeny_1_1tween_3_01T_01_4_a4f0aa3afbd6ac7dd9cb856b55e889141.html  classtweeny_1_1tween_3_01T_01_4_a5fa23db4fe982d4aeb3d9d2b671f5711.html  classtweeny_1_1tween_3_01T_01_4_a69fe160d5a57e60c8be43671e4fda494.html  classtweeny_1_1tween_3_01T_01_4_a6c49126e7d3aaea71a1ffcfd4b96eec1.html  classtweeny_1_1tween_3_01T_01_4_a763c15f3388160339096ed509ba65cc5.html  classtweeny_1_1tween_3_01T_01_4_a7d5025469015935d4411449ccdb067df.html  classtweeny_1_1tween_3_01T_01_4_a879882f4414da4d7e12fafc63b588470.html  classtweeny_1_1tween_3_01T_01_4_a996f2f6c960641738fc46d3f39f6ef6f.html  classtweeny_1_1tween_3_01T_01_4_a9e001da37b190b83141529abd4ac3ed8.html  classtweeny_1_1tween_3_01T_01_4_aa0e033fe7b270676bcbfa3bfffe7e73c.html  classtweeny_1_1tween_3_01T_01_4_ab0e968baac020cc3388e4c8090f3abdf.html  classtweeny_1_1tween_3_01T_01_4_ab63149e2a6024032fb4ab8d627baed6b.html  classtweeny_1_1tween_3_01T_01_4_ac7b4aed73a1535f2e889cb129e572b7b.html  classtweeny_1_1tween_3_01T_01_4_acd2c270bb5bbba09a69f0f7bac49e82c.html  (+150 more)
doc/html/: annotated.html  classtweeny_1_1easing.html  classtweeny_1_1tween-members.html  classtweeny_1_1tween.html  classtweeny_1_1tween_3_01T_01_4.html  classtweeny_1_1tween_3_01T_01_4_a05e7fe93b91f66816b6038f4ac45620b.html  classtweeny_1_1tween_3_01T_01_4_a18699df9425ef39b3539b2b947936be8.html  classtweeny_1_1tween_3_01T_01_4_a3890d6b12dc423678b14e3f4f124a62c.html  classtweeny_1_1tween_3_01T_01_4_a437596339537ef3fdff5e570f63b4611.html  classtweeny_1_1tween_3_01T_01_4_a4b23292a814742d4c1a8c25c4a40d8f2.html  classtweeny_1_1tween_3_01T_01_4_a5fa23db4fe982d4aeb3d9d2b671f5711.html  classtweeny_1_1tween_3_01T_01_4_a6c49126e7d3aaea71a1ffcfd4b96eec1.html  classtweeny_1_1tween_3_01T_01_4_a996f2f6c960641738fc46d3f39f6ef6f.html  classtweeny_1_1tween_3_01T_01_4_aa0e033fe7b270676bcbfa3bfffe7e73c.html  classtweeny_1_1tween_3_01T_01_4_ad06929748e5b6e48ea39a56dd3467754.html  classtweeny_1_1tween_3_01T_01_4_afc6ac30a64b1f581962120bc7a353cbd.html  classtweeny_1_1tween_a03fcf9dd9af1edeeb34f12cb745b81f0.html  classtweeny_1_1tween_a09ff520d783517b00d329b6dc22f37b9.html  classtweeny_1_1tween_a2de4fad17de70b28f696d7688a9bc909.html  classtweeny_1_1tween_a3867756a5bc83fe90e148d1f5eaf0ea6.html  classtweeny_1_1tween_a3b138e2c71117483d8fb7f4d4fdac10c.html  classtweeny_1_1tween_a4c60cbc8cc32c4123ab51f1dfefc162e.html  classtweeny_1_1tween_a4f0aa3afbd6ac7dd9cb856b55e889141.html  classtweeny_1_1tween_a9d631c0108600f3e419c1358cafae277.html  dir_d44c64559bbebec7f509842c48db8b23.html  dispatcher_8h_source.html  easing_8h_source.html  functions.html  functions_func.html  group__back.html  group__elastic.html  group__quadratic.html  group__quintic.html  index.html  loop.html  tweentraits_8h_source.html  zombieexample.html
doc/html/search/: all_2.js  functions_0.js  functions_3.js  functions_4.js  functions_6.js  groups_0.js  groups_1.js  groups_2.js  groups_5.js  pages_1.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js
doc/man/man3/: _home_leo_tweeny_include_.3  back.3  bounce.3  circular.3  cubic.3  easings.3  easingsexample.3  elastic.3  exponential.3  linear.3  loop.3  quadratic.3  quartic.3  quintic.3  sinuisodal.3  tweeny.3  tweeny_easing.3  tweeny_tween.3  tweeny_tween_ T _.3  zombieexample.3
doc/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_1.js  functions_2.js  functions_5.js  functions_7.js  groups_3.js  groups_4.js  namespaces_0.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  variables_0.js  variables_4.js
examples/: CMakeLists.txt
examples/easings/: CMakeLists.txt  easings.cpp
examples/loop/: CMakeLists.txt  loop.cpp
examples/multitype/: multitype.cpp
examples/sprite/: CMakeLists.txt  engine.cpp  engine.h  input.cpp  input.h  main.cpp  sprite.cpp  sprite.h  sprite.html
examples/squares/: main.cpp
extras/: CMakeLists.txt
extras/sdl2/: CMakeLists.txt  README.md  color.cpp  color.h  cursor.cpp  cursor.h  engine.cpp  engine.h  input.cpp  input.h  point.cpp  point.h  rect.cpp  rect.h  sprite.cpp  sprite.h  stb_image.h
highlight/: highlight.pack.js
include/: dispatcher.h  easing.h  easingresolve.h  int2type.h  tween.h  tween.tcc  tweenone.tcc  tweenpoint.h  tweenpoint.tcc  tweentraits.h  tweeny.h  tweeny.tcc
include/tweeny/: event.h  tween.h  tween.tcc  tweeny.h
include/tweeny/detail/: interpolate.h  key-frame.h  tuple-utilities.h  tween-value.h  value-container.h
include/tweeny/easing/: back.h  (+13 more)
src/: sandbox.cc
src/tweeny/: tween.tcc
tests/: CMakeLists.txt  events.cpp  events_step.cpp  sanity.cpp  tween_tests.cpp
