project(sprite)
find_package(SDL2 REQUIRED)
add_executable(sprite main.cpp stb_image.h sprite.cpp sprite.h engine.cpp engine.h input.cpp input.h resources.c)
string(STRIP ${SDL2_LIBRARIES} SDL2_LIBS)
target_link_libraries(sprite PRIVATE tweeny ${SDL2_LIBS})
target_include_directories(sprite PRIVATE ${SDL2_INCLUDE_DIRS})
if (CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
    set_target_properties(sprite PROPERTIES LINK_FLAGS --emrun)
endif()
